# order-management-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_websocket.py
alembic/: env.py
alembic/versions/: 20260723_0001_initial_schema.py
app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py
app/api/: accounts.py  orders.py  positions.py  router.py
app/broker/: __init__.py  base.py  fake.py  worker.py
app/domain/: __init__.py  enums.py  exceptions.py  order_rules.py  order_state_machine.py  position_rules.py
app/market_data/: __init__.py  websocket_client.py
app/models/: __init__.py  account.py  base.py  broker_event.py  fill.py  market_price.py  order.py  order_event.py  position.py
app/repositories/: __init__.py  account_repository.py  broker_event_repository.py  market_data_repository.py  order_repository.py  position_repository.py
app/schemas/: account.py  broker.py  order.py  position.py
app/services/: __init__.py  account_service.py  cancellation_service.py  execution_service.py  market_data_service.py  order_lifecycle.py  order_service.py  pnl_service.py  position_service.py
docker/postgres/: init.sql
tests/: conftest.py  support.py
tests/integration/: conftest.py  test_concurrency.py  test_fill_processing.py  test_orders_api.py
tests/unit/: test_order_validation.py  test_pnl.py  test_state_machine.py
