[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "order-management-system"
version = "1.0.0"
description = "Transaction-safe FastAPI order management system assignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
    "websockets>=14,<16",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1,<3.0",
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires PostgreSQL",
    "concurrency: exercises concurrent database behavior",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]
